editing stylesheet to have a flexbox container

--- a/res/screen.css
+++ b/res/screen.css
@@ -39,6 +39,12 @@ body {
     float: right;
 }
 
+.container {
+  width: 460pf;
+  display: flex;
+  justify-content: center;
+}
+
 div.breaker { clear:both; }
 .template { display:none; }
 
