--- a/res/screen.css
+++ b/res/screen.css
@@ -1,5 +1,5 @@
 @viewport {
-  width: device-width;
+  width: device-width, initial-scale=1.0;
 }
 
 * { margin:0; padding:0; font-family:inherit; }
