--- a/res/screen.css
+++ b/res/screen.css
@@ -29,13 +29,16 @@ body {
 }
 
 .left {
-    width: 460px;
+    width: 636px;
 }
 
-.right {
-    padding-top: 3em;
-    width: 200px;
-    float: right;
+
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 99%;
 }
 
 
