--- a/res/screen.css
+++ b/res/screen.css
@@ -71,19 +71,8 @@ h4, h5, h6 { font-size: 16px; margin:1em 0 -0.2em 0; }
 
 /* anchors */
 a[href] {
-  color: red;
+  color: black;
   text-decoration: none;
-  /*display: inline-block;*/
-  padding-bottom:0.025em;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%);
-  background-repeat: repeat-x;
-  background-size: 2px .1em;
-  background-position: 0 1.025em;
-  text-shadow: /* creates "openings" for descenders in the underline */
-   -1px -1px 0 #fff,
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff,
-     1px 1px 0 #fff;
 }
 a[href^="#"] {
   background: inherit;
