--- a/res/screen.css
+++ b/res/screen.css
@@ -78,7 +78,12 @@ a[href^="#"] {
   background: inherit;
   text-shadow: none;
 }
-
+a[href]:hover {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 50%);
+}
+a[href^="#"]:hover {
+  background: inherit;
+}
 
 
 a.img { border:none; background:transparent !important; }
